# mcp-emc-regulations

./: README.md  pyproject.toml
src/mcp_emc_regulations/: server.py
src/mcp_emc_regulations/data/: automotive_emc.json  cispr25_limits.json  cispr_limits.json  lte_bands.json  nr_bands.json  part15_limits.json  part18_limits.json  restricted_bands.json
