[project]
name = "mcp-emc-regulations"
version = "0.1.0"
description = "MCP server for EMC/RF regulatory lookup - emission limits, frequency bands, compliance requirements"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-emc-regulations = "mcp_emc_regulations:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
